--- a/meta.yaml
+++ b/meta.yaml
@@ -3,7 +3,7 @@ package:
 version: "0.0.0"
 
 source:
-  url: https://svwh.dl.sourceforge.net/project/healpix/Healpix_3.30/healpix_cxx-3.30.0.tar.gz
+  url: https://iweb.dl.sourceforge.net/project/healpix/Healpix_3.31/Healpix_3.31_2016Aug26.tar.gz
 
 build:
   number: 0
